@@ -1364,8 +1364,8 @@ static const uint8_t match_image[] = {
 0x2,0x12,0x0,0x0,0x0,0xe,0x6a,0x0,0x0,0x0,0x2,0x42,0x0,0x0,0x0,
 0xe,0x6a,0x0,0x0,0x0,0x2,0x14,0x0,0x0,0x0,0xe,0x6a,0x0,0x0,0x0,
 0x2,0x3c,0x0,0x0,0x0,0xe,0x6a,0x0,0x0,0x0,0x2,0x36,0x0,0x0,0x0,
-0xe,0x6a,0x0,0x0,0x0,0x2,0x74,0x1,0x0,0x0,0xe,0x6a,0x0,0x0,0x0,
-0x2,0x36,0x0,0x0,0x0,0xe,0x6a,0x0,0x0,0x0,0x2,0x74,0x1,0x0,0x0,
+0xe,0x6a,0x0,0x0,0x0,0x2,0x78,0x1,0x0,0x0,0xe,0x6a,0x0,0x0,0x0,
+0x2,0x36,0x0,0x0,0x0,0xe,0x6a,0x0,0x0,0x0,0x2,0x78,0x1,0x0,0x0,
 0xe,0x6a,0x0,0x0,0x0,0x2,0x36,0x0,0x0,0x0,0xe,0x12,0x0,0x0,0x0,
 0x2,0x4d,0x0,0x0,0x0,0xe,0x3b,0x0,0x0,0x0,0xe,0x3,0x0,0x0,0x0,
 0xe,0x3b,0x0,0x0,0x0,0xe,0x3,0x0,0x0,0x0,0xe,0x3b,0x0,0x0,0x0,
