@@ -2587,6 +2587,35 @@
 (1     (fxif 5 3 0))
 (error (fxif 5 15))
 (error (fxif 5 15 0.0))
+(error (fxbit-count))
+(2     (fxbit-count 5))
+(2     (fxbit-count 6))
+(3     (fxbit-count 7))
+(-3    (fxbit-count -7))
+(error (fxbit-count 5.0))
+(error (fxlength))
+(1     (fxlength 1))
+(8     (fxlength 255))
+(0     (fxlength 0))
+(1     (fxlength -2))
+(8     (fxlength -255))
+(error (fxlength 1.0))
+(error (fxfirst-bit-set))
+(-1    (fxfirst-bit-set 0))
+(0     (fxfirst-bit-set 1))
+(4     (fxfirst-bit-set 16))
+(1     (fxfirst-bit-set -2))
+(17    (fxfirst-bit-set (expt 2 17)))
+(error (fxfirst-bit-set 4.0))
+(#t    (fxbit-set? 15 0))
+(#f    (fxbit-set? 14 0))
+(#t    (fxbit-set? 14 3))
+(#f    (fxbit-set? 14 10))
+(#t    (fxbit-set? -1 10))
+(#t    (fxbit-set? -1 (- (fixnum-width) 1)))
+(error (fxbit-set? -1 (fixnum-width)))
+(error (fxbit-set? 14 -3))
+
 
 ;; number reader 2
 (1 #b1)
